--- a/styles.css
+++ b/styles.css
@@ -376,3 +376,46 @@
         .dark-mode .nav-link {
             color: #ff5722;
         }
+
+/*****************************Project image container*************************************/
+.image-container {
+            position: relative;
+            width: 100%;
+            max-width: 300px;
+            margin-bottom: 20px;
+        }
+        .image-container img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+        .icon-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: rgba(0, 0, 0, 0.5);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+        .icon-overlay .icon {
+            background: rgba(255, 255, 255, 0.3); /* Semi-transparent white for glassmorphism */
+            border-radius: 50%;
+            padding:6px 10px;
+            margin: 0 10px;
+            color: white;
+            font-size: 1.50rem;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Box shadow for depth */
+            backdrop-filter: blur(5px); /* Adds blur effect inside the icon */
+            transition: transform 0.3s ease, background-color 0.3s ease;
+            cursor: pointer;
+        }
+        .image-container:hover .icon-overlay {
+            opacity: 1;
+        }
+
+
