--- a/styles.css
+++ b/styles.css
@@ -388,6 +388,7 @@
             width: 100%;
             height: auto;
             display: block;
+            transform: scale(1.05);
         }
         .icon-overlay {
             position: absolute;
