--- a/styles.css
+++ b/styles.css
@@ -337,6 +337,9 @@
      .modal-header {
              background:#ffffff;
      }
+     .modal-body {
+             background:#ffffff;
+     }
 
 /*****************************************************/
     
