--- a/styles.css
+++ b/styles.css
@@ -298,6 +298,7 @@
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
+            padding:0px;
         }
     .image-container:hover { transform:scale(1.05)   }
         .image-container img {
