--- a/styles.css
+++ b/styles.css
@@ -326,7 +326,7 @@
             padding:6px 10px;
             margin: 0 10px;
             color: white;
-            font-size: 1.50rem;
+            font-size: clamp(1rem, 2.5vw, 1.25rem);
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Box shadow for depth */
             backdrop-filter: blur(5px); /* Adds blur effect inside the icon */
             transition: transform 0.3s ease, background-color 0.3s ease;
